# stillpoint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py
core/api/: __init__.py  main.py
core/persistence/: __init__.py  database.py  schema.sql
core/web/: index.html
docs/: hardware-guide.md  legal.md  roadmap.md  threat-model.md
hardware/: install.sh  stillpoint-anpr.service
scripts/: anpr_processor.py  ingest_kismet.py
tests/: test_schema.py
